<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="onethreeseven.gpsstoptrack.MainActivity"
    android:background="@color/appBg">

    <TextView
        android:text="@string/start_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructText"
        tools:text="@string/start_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/appText"
        android:paddingBottom="50dp"
        android:paddingTop="10dp" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stopMoveToggle"
        android:checked="true"
        android:textOff="@string/stopping"
        android:textOn="@string/moving"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@color/toggleBtn"
        android:textColor="@color/appText" />

    <TextView
        android:text="@string/recording_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recordingIntervalText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/appText"
        android:paddingTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dialog"
        android:entries="@array/recording_intervals"
        android:background="@color/toggleBtn"
        android:popupBackground="@color/toggleBtn"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" />


    <ImageButton
        android:contentDescription="@string/recording_button"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/ic_record_button"
        android:id="@+id/recordingBtn"
        android:tint="@color/recordBtnStartRed"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:paddingTop="20dp"
        android:layout_weight="0.5" />


    <TextView
        android:text="@string/default_status_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statusText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/appText"
        tools:text="@string/default_status_prompt"
        android:paddingTop="20dp" />


</LinearLayout>
